<resources>
    <string name="app_name">wemaAuth</string>
    <string name="be_audacious">Be Audacious</string>
    <string name="don_t_just_make_moves">Don\'t just make moves</string>
    <string name="get_started">Get started</string>
    <string name="log_in">Log In</string>
    <string name="wallet">wallet</string>
    <string name="quick_links">Quick Links</string>
    <string name="get_a_loan">Get a Loan</string>
    <string name="get_a_wallet">Get a Wallet</string>
    <string name="app_version">v4.3.3</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="unable_to_log_in_kindly">"Unable to log in? Kindly "</string>
    <string name="if_"> if;</string>
    <string name="signup_condition_1">- You are new to WEMA and ALAT</string>
    <string name="signup_condition_2">- You are new to ALAT and have a WEMA account</string>
    <string name="signup_condition_3">- You are new to ALAT and have WEMA mobile</string>
    <string name="next">Next</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_instruction">Enter your registered email address or username</string>
    <string name="email_address_username">Email address/username</string>
    <string name="goto_back">goto back</string>
    <string name="show_or_hide_password">Show or hide password</string>
</resources>