<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/body"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:src="@drawable/alat" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/don_t_just_make_moves"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:text="@string/be_audacious"
        android:textColor="@color/primary"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/get_started"
        android:src="@drawable/intro" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/primary_outline"
        android:text="@string/log_in"
        android:textColor="@color/primary"
        android:textSize="14sp"
        app:backgroundTint="@null" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/getStartedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/primary_background"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="62dp"
            android:layout_height="wrap_content"

            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                style="@style/bottom_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/secondary_background"
                android:contentDescription="@string/wallet"
                android:src="@drawable/money_bag" />

            <TextView
                style="@style/icon_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_a_loan" />
        </LinearLayout>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                style="@style/bottom_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/secondary_background"
                android:contentDescription="@string/wallet"
                android:src="@drawable/flash" />

            <TextView
                style="@style/icon_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quick_links" />
        </LinearLayout>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                style="@style/bottom_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/secondary_background"
                android:contentDescription="@string/wallet"
                android:src="@drawable/wallet" />

            <TextView
                style="@style/icon_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_a_wallet" />
        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_version" />
</LinearLayout>