<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/body"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgetPasswordActivity">

    <ImageButton
        android:id="@+id/goto_back"
        android:contentDescription="@string/goto_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@null"
        android:src="@drawable/left_arrow"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/header"
        android:layout_marginBottom="24dp"
        android:text="@string/forgot_password" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="30dp"
        android:text="@string/reset_instruction"/>

    <TextView
        style="@style/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/resetEmail"
        android:text="@string/email_address_username" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/resetEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:inputType="textEmailAddress"
        android:paddingTop="24dp"
        android:textCursorDrawable="@drawable/input_primary_cursor" />

    <View
        android:id="@+id/resetEmailBorder"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="24dp"
        android:background="@color/primary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/passwordResetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/primary_background"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@null" />

</LinearLayout>